<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_13_i_e_tip_the_tax">Okay (13% i.e. tip the tax)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="frequency_for_tipping_20">Frequency for tipping 20%</string>
    <string name="frequency_for_tipping_18">Frequency for tipping 18%</string>
    <string name="frequency_for_tipping_13">Frequency for tipping 13%</string>
    <string name="your_tipping_stats">Your Tipping Stats:</string>
</resources>